--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.3",
+    "netlify-identity-widget": "^1.9.2",
     "next": "13.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
