--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "bootstrap": "^5.2.3",
     "netlify-identity-widget": "^1.9.2",
     "next": "13.0.6",
+    "next-auth": "^4.18.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "eslint": "8.29.0",
