--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "netlify-identity-widget": "^1.9.2",
     "next": "13.0.6",
     "next-auth": "^4.18.6",
+    "popper.js": "^1.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
