--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "netlify-identity-widget": "^1.9.2",
-    "next": "13.0.6",
+    "next": "^13.0.6",
     "next-auth": "^4.18.6",
     "popper.js": "^1.16.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
+    "react-router-dom": "^6.11.2",
+    "scss": "^0.2.4",
+    "swiper": "^9.3.2",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
